--- a/apps/web/config/locales/about/home/zu.yml
+++ b/apps/web/config/locales/about/home/zu.yml
@@ -3,7 +3,7 @@ zu:
     about:
       home:
         title: 'Ruby developer'
-        age: '29 years'
+        age: '%{age} years'
         location: 'Munich, Germany'
         pitch: 'I’m a software developer with a passion for solving problems and programming
           as a tool to make people’s lives easier. I graduated from IFCE - Ceará’s
