--- a/apps/web/config/locales/about/home/zu.yml
+++ b/apps/web/config/locales/about/home/zu.yml
@@ -15,6 +15,14 @@ zu:
       experiences:
         header: 'Experiences'
         link: 'company website'
+        freework:
+          title: 'Fullstack Developer'
+          period: 'Aug 2017 - Present'
+          name: 'Freework GmbH'
+          description: 'As a fullstack developer, I implemented and mainained the
+          backend infrastructure for applications across multiple platforms,
+          using the Hanami framework. I also worked on the development  of web,
+          mobile and desktop applications using React and React Native.'
         ifactory:
           title: 'Fullstack Developer'
           period: 'Jan 2017 - Jul 2017'
